src/testData/analysis/functionLiterals.cr
->(x : Int32, y : Int32) {}

->(<error descr="Duplicated parameter name: x">x</error> : Int32, y : Int32, <error descr="Duplicated parameter name: x">x</error> : Int32) {}